# agent-engine

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  config.example.yaml  pyproject.toml
scripts/: launch.sh
src/agent_engine/: main.py
src/agent_engine/tools/: response_tools.py  thread_tools.py  vault_tools.py
tests/application/indexing/: test_indexer.py
tests/application/run/: test_run_service.py
tests/application/thread/: test_thread_search_tool.py  test_thread_service.py
tests/application/vault/: test_vault_service.py
tests/core/run/: test_run_models.py
tests/core/thread/: test_chunk.py  test_thread_model.py
tests/core/vault/: test_chunk.py  test_entry.py
tests/infrastructure/: test_config.py
tests/infrastructure/indexing/: test_schedulers.py
tests/infrastructure/persistence/: test_sqlite_resume_handle_store.py  test_sqlite_thread_cursor_store.py
tests/infrastructure/thread/: test_chunker.py  test_in_memory_thread_index.py  test_indexing_thread_repository.py  test_jsonl_thread_repository.py  test_jsonl_thread_scanner.py
tests/infrastructure/vault/: test_chunker.py  test_file_vault_repository.py  test_file_vault_scanner.py  test_in_memory_vault_index.py  test_in_memory_vector_index.py  test_markdown_frontmatter.py  test_numpy_vault_index.py  test_numpy_vector_store.py  test_persistent_vector_index.py  test_sqlite_vault_repository.py
tests/integrations/discord/: test_bot.py
tests/integrations/http/: test_server.py
tests/tools/: test_response_tools.py  test_thread_tools.py  test_vault_tools.py
(+71 files in other folders)
