[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-engine"
version = "0.1.0"
description = "Provider-agnostic runtime for AI agents with per-project persistent knowledge."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Justin Chan", email = "csnow.to@gmail.com" }]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "claude-agent-sdk>=0.1.63",
    "sentence-transformers>=3.0",
    "einops>=0.8",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "discord.py>=2.4",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "mcp>=1.0",
    "watchfiles>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
agent-engine = "agent_engine.integrations.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_engine.integrations.skills.bundled" = ["**/SKILL.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
